# tinywatcher

./: .gitignore  ALERT_DESTINATIONS.md  CHANGELOG.md  Cargo.toml  EMAIL_ALERTER.md  GLOB_PATTERNS.md  HEALTH_CHECKS.md  LICENSE  PRIVILEGE_DETECTION.md  README.md  README_SHORT.md  SENDGRID_INTEGRATION.md  SERVICE_MANAGEMENT.md  SOURCE_FILTERING.md  SOURCE_FILTERING_QUICKREF.md  STREAMING.md  STREAMING_IMPLEMENTATION.md  TESTING.md  THRESHOLDS.md  example-identity.yaml  example-pagerduty.yaml  example-sources.yaml  example-text-pattern.yaml  example.yaml  mysql.yaml  new_alert_ideas.md  simulate-logs.sh  stream-config.yaml  test-config.yaml  test-file-config.yaml  test-logstorm.sh  test-source-filtering.yaml  test-streaming.sh  tinywatcher-Cargo.toml.backup
.github/workflows/: release.yml
examples/: email-config.yaml  example-all-alerts.yaml  example-discord.yaml  example-glob-patterns.yaml  example-health-checks.yaml  example-ntfy.yaml  example-sendgrid.yaml  example-telegram.yaml  example-thresholds.yaml  example.yaml  logstorm-stress-test.yaml  test-config.yaml
logstorm/: Cargo.toml  README.md
logstorm/src/: main.rs
src/: alerts.rs  cli.rs  config.rs  config_tests.rs  health_monitor.rs  health_monitor_tests.rs  heartbeat_monitor.rs  log_monitor.rs  log_monitor_tests.rs  main.rs  resource_monitor.rs  stream_monitor.rs
src/alerts/: discord.rs  email.rs  mod.rs  mod_tests.rs  ntfy.rs  pagerduty.rs  sendgrid.rs  slack.rs  stdout.rs  telegram.rs  webhook.rs
src/daemon/: launchd.rs  mod.rs  privilege.rs  systemd.rs  windows_service.rs
