[package]
name = "tinywatcher"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A tiny, zero-infrastructure observability tool for logs and system resources"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/tinywatcher"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1.0"
tokio-tungstenite = "0.23"
futures-util = "0.3"
notify = "6.1"
sysinfo = "0.31"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "sendmail-transport", "builder", "tokio1-native-tls"] }
termcolor = "1.4"
hostname = "0.4"

# Daemon/service management
[target.'cfg(unix)'.dependencies]
daemonize = "0.5"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
