[package]
name = "tinywatcher"
version = "0.2.0"
edition = "2021"
authors = ["Alex Nemeth <alex@alexnemethdata.com>"]
description = "A tiny, zero-infrastructure observability tool for logs and system resources"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tinywatcher/tinywatcher"

# Crates.io metadata
keywords = [
	"observability",
	"monitoring",
	"logging",
	"alerting",
	"system",
	"resource-monitoring",
	"log-monitoring",
	"health-check",
	"daemon",
	"cli"
]
categories = [
	"command-line-utilities",
	"monitoring",
	"logging",
	"system-tools",
	"asynchronous"
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde_json = "1.0"
tokio-tungstenite = "0.23"
futures-util = "0.3"
notify = "6.1"
sysinfo = "0.31"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "sendmail-transport", "builder", "tokio1-rustls-tls"] }
termcolor = "1.4"
hostname = "0.4"
glob = "0.3"

# Daemon/service management
[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[dev-dependencies]
tempfile = "3.8"
