[package]
name = "logstorm"
version = "0.2.0"
edition = "2021"
authors = ["Alex Nemeth <alex@alexnemethdata.com>"]
description = "High-performance log generator for stress testing tinywatcher"
license = "MIT"
repository = "https://github.com/tinywatcher/tinywatcher"
publish = false  # Not published separately to crates.io

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
chrono = "0.4"
anyhow = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "logstorm"
path = "src/main.rs"
